--- a/Huya_Offical/Huya_Offical.csproj
+++ b/Huya_Offical/Huya_Offical.csproj
@@ -70,6 +70,7 @@
     </Compile>
     <Compile Include="Classes\HttpGet\HttpGet.cs" />
     <Compile Include="Classes\Json\Json.cs" />
+    <Compile Include="Classes\LiveRooms\Build\Build.cs" />
     <Compile Include="Classes\LiveRooms\Get\Get.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
